WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42569
[EFL] Fix some EFL theme issues
https://bugs.webkit.org/show_bug.cgi?id=42569
Summary
[EFL] Fix some EFL theme issues
Rafael Antognolli
Reported
2010-07-19 08:10:46 PDT
[EFL] Fix some EFL theme issues
Attachments
Patch
(2.24 KB, patch)
2010-07-19 08:13 PDT
,
Rafael Antognolli
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rafael Antognolli
Comment 1
2010-07-19 08:13:56 PDT
Created
attachment 61957
[details]
Patch
Antonio Gomes
Comment 2
2010-07-19 08:24:49 PDT
Comment on
attachment 61957
[details]
Patch
> + Keep a pointer to theme filename and check for it correctly.
What was wrong previously? from what I understood, instead of having 'theme' and 'file' variables you changed to only have 'file', or you really fixing a problem?
Gustavo Sverzut Barbieri
Comment 3
2010-07-19 08:37:04 PDT
(In reply to
comment #2
)
> (From update of
attachment 61957
[details]
) > > > + Keep a pointer to theme filename and check for it correctly. > > What was wrong previously? from what I understood, instead of having 'theme' and 'file' variables you changed to only have 'file', or you really fixing a problem?
The good old annoyance of storing "const char*" that is return of a dynamically allocated String::utf8().data(). Now it is being stored in CString and used as CString::data(), for immediate use, retaining the memory.
Lucas De Marchi
Comment 4
2010-07-19 08:38:51 PDT
(In reply to
comment #2
)
> (From update of
attachment 61957
[details]
) > > > + Keep a pointer to theme filename and check for it correctly. > > What was wrong previously? from what I understood, instead of having 'theme' and 'file' variables you changed to only have 'file', or you really fixing a problem?
He was fixing a problem:
> - file = edjeThemeRecursive().utf8().data();
The object returned by .utf8() will die as soon as .data() is returned. Thus 'file' will point for a memory area that is not allocated anymore.
WebKit Commit Bot
Comment 5
2010-07-19 09:06:25 PDT
Comment on
attachment 61957
[details]
Patch Clearing flags on attachment: 61957 Committed
r63666
: <
http://trac.webkit.org/changeset/63666
>
WebKit Commit Bot
Comment 6
2010-07-19 09:06:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug