2010-07-19  Rafael Antognolli  <antognolli@profusion.mobi>

Reviewed by Antonio Gomes.

        [EFL] Fix some EFL theme issues
        https://bugs.webkit.org/show_bug.cgi?id=42569

        Keep a pointer to theme filename and check for it correctly.
        Reduce the scope of some variables.
        Don't test for platformWidget() since we are not using it.

        No new tests, no new functionality.

        * platform/efl/WidgetEfl.cpp:
        (WebCore::Widget::applyCursor):
        (WebCore::Widget::setCursor):

Canonical link: https://commits.webkit.org/54506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63666 268f45cc-cd09-0410-ab3c-d52691b4dbfc